--- a/wisecow/deployment.yaml
+++ b/wisecow/deployment.yaml
@@ -15,7 +15,15 @@ spec:
         app: wisecow
     spec:
       containers:
-      - name: wisecow
-        image: param9064/wisecow:latest
-        ports:
-        - containerPort: 4499
+        - name: wisecow
+          image: param9064/wisecow:latest
+          ports:
+            - containerPort: 443  # Update to use HTTPS port
+          volumeMounts:
+            - name: tls-certs
+              mountPath: "/etc/tls"
+              readOnly: true
+      volumes:
+        - name: tls-certs
+          secret:
+            secretName: tls-certs
