--- a/wisecow/service.yaml
+++ b/wisecow/service.yaml
@@ -2,11 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: wisecow-service
+  labels:
+    app: wisecow
 spec:
+  type: LoadBalancer
   selector:
     app: wisecow
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 4499
-  type: LoadBalancer
+    - protocol: TCP
+      port: 443
+      targetPort: 443  # Ensure this matches the containerPort in deployment.yaml
