--- a/wisecow/ci-cd.yaml
+++ b/wisecow/ci-cd.yaml
@@ -3,48 +3,41 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main
+      - main  # Trigger pipeline on push to main branch
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Login to DockerHub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v2
-      with:
-        push: true
-        tags: param9064/wisecow:latest
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up kubectl
-      uses: Azure/setup-kubectl@v1
-      with:
-        version: 'v1.18.0'
-    
-    - name: Deploy to Kubernetes
-      env:
-        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
-      run: |
-        echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 --decode > $HOME/.kube/config
-        kubectl apply -f deployment.yaml
-        kubectl apply -f service.yaml
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build and push Docker image
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: |
+           docker build -t wisecow:latest .
+           docker tag wisecow:latest param9064/wisecow:latest
+           docker push param9064/wisecow:latest
+
+      - name: Set up kubectl
+        uses: Azure/setup-kubectl@v1
+        with:
+          version: 'v1.18.0'
+
+      - name: Deploy TLS certificates as Kubernetes secret
+        run: |
+          kubectl create secret generic tls-certs --from-file=tls.crt --from-file=tls.key --dry-run=client -o yaml | kubectl apply -f -
+
+      - name: Deploy to Kubernetes
+        env:
+          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+        run: |
+          echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 --decode > $HOME/.kube/config
+          kubectl apply -f deployment.yaml
+          kubectl apply -f service.yaml
