--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,9 +46,14 @@ jobs:
         run: |
          curl -sSL https://sdk.cloud.google.com | bash
          exec -l $SHELL
-         gcloud auth activate-service-account --key-file ${{ secrets.GCP_SA_KEY }}
-         gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
+         # gcloud auth activate-service-account --key-file ${{ secrets.GCP_SA_KEY }}
+         # gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
 
+         - name: Set up Google Cloud SDK
+           uses: google-github-actions/setup-gcloud@v0.3.0
+           with:
+             project_id: ${{ secrets.GCP_PROJECT_ID }}
+            service_account_key: ${{ secrets.GCP_SA_KEY }}
       - name: Enable Kubernetes Engine API
         run: |
           gcloud services enable container.googleapis.com
