--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,8 +52,8 @@ jobs:
          - name: Set up Google Cloud SDK
            uses: google-github-actions/setup-gcloud@v0.3.0
            with:
-             project_id: ${{ secrets.GCP_PROJECT_ID }}
-            service_account_key: ${{ secrets.GCP_SA_KEY }}
+             GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+             GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
       - name: Enable Kubernetes Engine API
         run: |
           gcloud services enable container.googleapis.com
