--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,10 +33,10 @@ jobs:
       #   uses: Azure/setup-kubectl@v1
       #   with: 
       #     version: 'v1.18.0'
-      - name: Set up kubectl
-        uses: azure/setup-kubectl@v1
-        with:
-            version: 'latest'
+      # - name: Set up kubectl
+      #   uses: azure/setup-kubectl@v1
+      #   with:
+      #       version: 'latest'
 
       - name: Create .kube directory
         run: |
@@ -46,14 +46,14 @@ jobs:
         run: |
          curl -sSL https://sdk.cloud.google.com | bash
          exec -l $SHELL
-         # gcloud auth activate-service-account --key-file ${{ secrets.GCP_SA_KEY }}
-         # gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
+         gcloud auth activate-service-account --key-file ${{ secrets.GCP_SA_KEY }}
+         gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
 
-         - name: Set up Google Cloud SDK
-           uses: google-github-actions/setup-gcloud@v0.3.0
-           with:
-             GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-             GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
+         # - name: Set up Google Cloud SDK
+         #   uses: google-github-actions/setup-gcloud@v0.3.0
+         #   with:
+         #     GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+         #     GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
       - name: Enable Kubernetes Engine API
         run: |
           gcloud services enable container.googleapis.com
