--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,17 +46,47 @@ jobs:
         run: |
          curl -sSL https://sdk.cloud.google.com | bash
          exec -l $SHELL
-         gcloud auth activate-service-account --key-file ${{ secrets.GCP_SA_KEY }}
-         gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
+         # gcloud auth activate-service-account --key-file ${{ secrets.GCP_SA_KEY }}
+         # gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
 
          # - name: Set up Google Cloud SDK
          #   uses: google-github-actions/setup-gcloud@v0.3.0
          #   with:
          #     GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
          #     GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
+name: Enable Kubernetes Engine API
+
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
+
+jobs:
+  enable-api:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v0.3.0
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+      
+      - name: Set Google Cloud project ID
+        run: |
+          gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
+      
       - name: Enable Kubernetes Engine API
         run: |
           gcloud services enable container.googleapis.com
+
+         
+      # - name: Enable Kubernetes Engine API
+      #   run: |
+      #     gcloud services enable container.googleapis.com
 
       - name: Get Cluster Credentials
         run: |
