--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,15 +90,20 @@ jobs:
       #   run: |
       #     kubectl apply -f wisecow-deployment.yaml
       #     kubectl apply -f wisecow-service.yaml
+      # - name: Set up kubectl
+      #   uses: azure/setup-kubectl@v1
+      #   with:
+      #     version: 'latest'  # Install the latest version of kubectl
+      #     install-location: '/usr/local/bin/kubectl'
       - name: Set up kubectl
         uses: azure/setup-kubectl@v1
         with:
-          version: 'latest'  # Install the latest version of kubectl
-          install-location: '/usr/local/bin/kubectl'
+         version: 'latest'
+
+      - name: Decode kubeconfig
+        run: echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 --decode > $HOME/.kube/config
+        
       - name: Deploy to Kubernetes
-        env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
         run: |
-          echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 --decode > $HOME/.kube/config
-          kubectl apply -f deployment.yaml
-          kubectl apply -f service.yaml
+          kubectl apply -f wisecow-deployment.yaml
+          kubectl apply -f wisecow-service.yaml
