--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,17 @@ jobs:
         run: |
           
           gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-      
+
+      - name: Install kubectl
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y kubectl
+
+      - name: Install gke-gcloud-auth-plugin
+        run: |
+          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+          gcloud components update
+
       - name: Enable Kubernetes Engine API
         run: |
           gcloud services enable container.googleapis.com
