--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,8 +73,9 @@ jobs:
 
       - name: Install gke-gcloud-auth-plugin
         run: |
-          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
-          gcloud components update
+           gcloud components update
+           gcloud components install kubectl
+           gcloud components install gke-gcloud-auth-plugin  
 
       - name: Enable Kubernetes Engine API
         run: |
