--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,15 +29,7 @@ jobs:
            docker tag wisecow:latest param9064/wisecow:latest
            docker push param9064/wisecow:latest
 
-      # - name: Set up kubectl
-      #   uses: Azure/setup-kubectl@v1
-      #   with: 
-      #     version: 'v1.18.0'
-      # - name: Set up kubectl
-      #   uses: azure/setup-kubectl@v1
-      #   with:
-      #       version: 'latest'
-
+     
       - name: Create .kube directory
         run: |
           mkdir -p $HOME/.kube
@@ -46,14 +38,7 @@ jobs:
         run: |
          curl -sSL https://sdk.cloud.google.com | bash
          exec -l $SHELL
-         # gcloud auth activate-service-account --key-file ${{ secrets.GCP_SA_KEY }}
-         # gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-
-         # - name: Set up Google Cloud SDK
-         #   uses: google-github-actions/setup-gcloud@v0.3.0
-         #   with:
-         #     GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-         #     GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
+      
       
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v0.3.0
@@ -81,10 +66,7 @@ jobs:
         run: |
           gcloud services enable container.googleapis.com
 
-         
-      # - name: Enable Kubernetes Engine API
-      #   run: |
-      #     gcloud services enable container.googleapis.com
+
 
       - name: Get Cluster Credentials
         run: |
@@ -97,15 +79,7 @@ jobs:
       #   run: |
       #     echo "${{ secrets.KUBE_CONFIG }}" | base64 --decode > $HOME/.kube/config
 
-      # - name: Deploy to Kubernetes
-      #   run: |
-      #     kubectl apply -f wisecow-deployment.yaml
-      #     kubectl apply -f wisecow-service.yaml
-      # - name: Set up kubectl
-      #   uses: azure/setup-kubectl@v1
-      #   with:
-      #     version: 'latest'  # Install the latest version of kubectl
-      #     install-location: '/usr/local/bin/kubectl'
+    
       - name: Set up kubectl
         uses: azure/setup-kubectl@v1
         with:
@@ -116,5 +90,7 @@ jobs:
         
       - name: Deploy to Kubernetes
         run: |
+          kubectl apply -f cluster-issuer.yaml
           kubectl apply -f deployment.yaml
           kubectl apply -f service.yaml
+          kubectl apply -f ingress.yaml
