--- a/ingress.yaml
+++ b/ingress.yaml
@@ -8,10 +8,10 @@ metadata:
 spec:
   tls:
   - hosts:
-    - your-domain.com
+    - https://verbose-funicular-wr7vwvjxq7qpf94qw-4499.app.github.dev/
     secretName: wisecow-tls
   rules:
-  - host: your-domain.com
+  - host: https://verbose-funicular-wr7vwvjxq7qpf94qw-4499.app.github.dev/
     http:
       paths:
       - path: /
