--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,5 +84,6 @@ jobs:
         
       - name: Deploy to Kubernetes
         run: |   
+          minikube start
           kubectl apply -f deployment.yaml
           kubectl apply -f service.yaml
